Added Preline Template

--- a/frontend/src/styles/theme/index.css
+++ b/frontend/src/styles/theme/index.css
@@ -1,6 +1,6 @@
-
-@import "./fonts.css";
 @import "./reset.css";
+@import "./fonts.css";
+@import "./glass.css";
 
 :root {
     color-scheme: light !important;
